style fixes for non-enumset grid columns having .i-bgimg-box-wrap items within cells

--- a/css/admin/indi.layout.css
+++ b/css/admin/indi.layout.css
@@ -17,7 +17,10 @@
     position: relative;
     top: 2px;
 }
-.i-bgimg-box-wrap, .i-color-box-wrap {text-align: center;}
+.i-bgimg-box-wrap .i-color-box[style*="background: url"]{
+    vertical-align: text-bottom;
+}
+.i-grid-column-enumset .i-bgimg-box-wrap, .i-color-box-wrap {text-align: center;}
 .x-btn .x-btn-inner{color: #04408C}
 input[type=text],input[type=password]{padding-left: 2px; padding-right: 2px;}
 .i-inline-block{display: inline-block;}
